<resources>
    <string name="app_name">Football Match Pro</string>
    <string name="vs">VS</string>
    <string name="appbar_scrolling_view_behavior" translatable="false">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="last_match">Last Match</string>
    <string name="next_match">Next Match</string>
    <string name="goals">Goals</string>
    <string name="shots">Shots</string>
    <string name="lineups">Lineups:</string>
    <string name="goalkeeper">Goalkeeper</string>
    <string name="defenders">Defenders</string>
    <string name="midfielder">Midfielder</string>
    <string name="foward">Forward</string>
    <string name="substitutes">Substitutes</string>
    <string name="favorites">Favorites</string>

    <array name="league">
        <item>English Premier League</item>
        <item>English League Championship</item>
        <item>German Bundesliga</item>
        <item>Italian Serie A</item>
        <item>French Ligue 1</item>
        <item>Spanish La Liga</item>
    </array>
    <array name="leagueID">
        <item>4328f</item>
        <item>4329f</item>
        <item>4331f</item>
        <item>4332f</item>
        <item>4334f</item>
        <item>4335f</item>
    </array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="matches">Matches</string>
    <string name="teams">Teams</string>
    <string name="weight_kg">Weight(Kg)</string>
    <string name="height_m">Height(m)</string>
    <string name="search">Search</string>
</resources>
