<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.DetailActivity"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="157dp">

            <TextView
                android:id="@+id/match_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Senin, 1 Januari 2018"
                android:textColor="@color/colorAccent"/>

            <TextView
                android:id="@+id/match_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:textColor="@color/colorAccent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/match_date"
                tools:text="00:00" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="32dp"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/vs"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:textColor="@color/colorAccent"/>

            <TextView
                android:id="@+id/match_league"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="2dp"
                android:textColor="@color/colorAccent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:text="League" />

            <TextView
                android:id="@+id/home_score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:textSize="28sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/textView4"
                app:layout_constraintHorizontal_bias="0.813"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="0"
                android:textColor="@color/colorPrimaryDark"/>

            <TextView
                android:id="@+id/away_score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginTop="8dp"
                android:textSize="28sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.236"
                app:layout_constraintStart_toEndOf="@+id/textView4"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="0"
                android:textAlignment="textEnd"
                android:textColor="@color/colorPrimaryDark"/>

            <ImageView
                android:id="@+id/home_image"
                android:layout_width="65dp"
                android:layout_height="65dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="32dp"
                android:src="@drawable/loading"
                app:layout_constraintEnd_toStartOf="@+id/home_score"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/away_image"
                android:layout_width="65dp"

                android:layout_height="67dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="32dp"
                android:src="@drawable/loading"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/away_score"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/home_team"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:textAlignment="center"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/home_score"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/home_image"
                app:layout_constraintVertical_bias="0.65"
                tools:text="Manchester United" />

            <TextView
                android:id="@+id/away_team"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:textAlignment="center"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/away_score"
                app:layout_constraintTop_toBottomOf="@+id/away_image"
                app:layout_constraintVertical_bias="0.652"
                tools:text="Manchester City" />
        </android.support.constraint.ConstraintLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/goals"
            android:textStyle="bold"
            android:textColor="@color/colorAccent"
            />
        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/home_goal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="parent"
                tools:text="Obama"
                android:textColor="@color/colorPrimary"/>


            <TextView
                android:id="@+id/away_goal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:textSize="12sp"
                android:textAlignment="textEnd"
                app:layout_constraintEnd_toEndOf="parent"
                tools:text="Obama"
                android:textColor="@color/colorPrimary"/>
        </android.support.constraint.ConstraintLayout>
        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp"
            tools:ignore="SmallSp" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/shots"
            android:textStyle="bold"
            android:textColor="@color/colorAccent"
             />
        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView

                android:id="@+id/home_shot"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="parent"
                tools:text="0"
                android:textColor="@color/colorPrimary" />
            <TextView
                android:id="@+id/away_shot"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:textAlignment="textEnd"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="parent"
                tools:text="0"
                android:textColor="@color/colorPrimary"/>
        </android.support.constraint.ConstraintLayout>
        <Space
            android:layout_width="match_parent"
            android:layout_height="10sp" />
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lineups"
            android:textSize="22sp"
            android:textStyle="bold"
            android:gravity="center"
            android:textColor="@color/colorPrimary"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/goalkeeper"
            android:textColor="@color/colorAccent"
            android:textAlignment="center"
             />
        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/home_gk"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="parent"
                tools:text="Obama"
                android:textColor="@color/colorPrimary" />



            <TextView
                android:id="@+id/away_gk"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:textAlignment="textEnd"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="parent"
                tools:text="Obama"
                android:textColor="@color/colorPrimary" />
        </android.support.constraint.ConstraintLayout>
        <Space
            android:layout_width="match_parent"
            android:layout_height="10sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/defenders"
            android:textAlignment="center"
            android:textColor="@color/colorAccent"
            android:textStyle="bold"/>

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/home_df"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="parent"
                tools:text="Obama"
                android:textColor="@color/colorPrimary"/>



            <TextView

                android:id="@+id/away_df"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:textAlignment="textEnd"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="parent"
                tools:text="Obama"
                android:textColor="@color/colorPrimary"/>
        </android.support.constraint.ConstraintLayout>
        <Space
            android:layout_width="match_parent"
            android:layout_height="10sp" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/midfielder"
            android:textColor="@color/colorAccent"
            android:textAlignment="center"/>
        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/home_mf"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="parent"
                tools:text="Obama"
                android:textColor="@color/colorPrimary"/>



            <TextView
                android:id="@+id/away_mf"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:textAlignment="textEnd"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="parent"
                tools:text="Obama"
                android:textColor="@color/colorPrimary"/>
        </android.support.constraint.ConstraintLayout>
        <Space
            android:layout_width="match_parent"
            android:layout_height="10sp" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/foward"
            android:textColor="@color/colorAccent"
            android:textStyle="bold"/>
        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/home_fw"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="parent"
                tools:text="Obama"
                android:textColor="@color/colorPrimary"/>



            <TextView
                android:id="@+id/away_fw"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:textAlignment="textEnd"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="parent"
                tools:text="Obama"
                android:textColor="@color/colorPrimary"/>
        </android.support.constraint.ConstraintLayout>
        <Space
            android:layout_width="match_parent"
            android:layout_height="10sp" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/substitutes"
            android:textStyle="bold"
            android:textColor="@color/colorAccent"
            android:textAlignment="center"/>
        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/home_sub"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="parent"
                tools:text="Obama"
                android:textColor="@color/colorPrimary"/>

            <TextView
                android:id="@+id/away_sub"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:textAlignment="textEnd"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="parent"
                tools:text="Obama"
                android:textColor="@color/colorPrimary"/>
        </android.support.constraint.ConstraintLayout>
        <Space
            android:layout_width="match_parent"
            android:layout_height="10sp" />
    </LinearLayout>


</ScrollView>